# SecureSystem_assignment_2

present_bs/: CMakeLists.txt  a.out  crypto.c  crypto.h  main.c  main_test.c  tes  test  test.c  test_against_testvectors.py
present_ref/: CMakeLists.txt  crypto.c  crypto.h  main.c  main_test  main_test.c  main_test.s  test  test_against_testvectors.py
